2008-11-20  Adam Schreiber  <sadam@clemson.edu>

    * ssh/seahorse-ssh-source.c: Monitor ssh pub key files so key changes are
    monitored on Solaris.  Patch by Jeff Cai.  Fixes bug #561641

2008-11-18  Adam Schreiber  <sadam@clemson.edu>

    * pgp/seahorse-add-subkey.glade:
    * pgp/seahorse-pgp-generate.glade:
    * ssh/seahorse-ssh-generate.glade: Set page_size property of spin buttons to
    zero. non-zero values deprecated.
    * src/seahorse-generate-select.c:
    * src/seahorse-generate-select.vala: Close select window when row activated.
    * pgp/seahorse-pgp-key-properties.c: Set transient on the main window 
    instead of the key properties window.  Fixes bug # 558234
    * ssh/seahorse-ssh-upload.glade: Indicate how to connect to port != 22.
    Fixes bug #489903

2008-11-15  Adam Schreiber  <sadam@clemson.edu>
    
    * pgp/seahorse-pgp-private-key-properties.glade:
    * pgp/seahorse-pgp-public-key-properties.glade: Remove frame shadow from 
    photoid frame.  Fixes bug #404785
    * gkr/seahorse-gkr-commands.c:
    * gkr/seahorse-gkr-commands.vala: Use ngettext. Fixes bug #554933

2008-11-14  Adam Schreiber  <sadam@clemson.edu>

    * libseahorse/seahorse-util.c: Re-fix dialog.  Patch from Wouter Bolsterlee

2008-11-11  Adam Schrieber  <sadam@clemson.edu>

    * src/eggtreemultidnd.c: Update from svn.  Fixes bug #560338

2008-11-10  Adam Schreiber  <sadam@clemson.edu>

    * ssh/seahorse-ssh-key-properties.c: Fix spelling error
    * ssh/seahorse-ssh-askpass.c: Remove call to gtk_init.  Patch from Jeff Cai.
    Fixes bug #557537
    * ssh/seahorse-ssh-operation.c: Fix upload password prompt.  
    Fixes bug #550755
    * libseahorse/seahorse-util.c: Fix markup in dialog.
    Patch from Jeff Cai.  Fixes bug #558494

=== seahorse 2.25.1 ===
2008-11-04  Adam Schreiber  <sadam@clemson.edu>

    * configure.in:
	* NEWS:
	* README: Release version 2.25.1

2008-11-03  Adam Schreiber  <sadam@clemson.edu>

    * src/eggtreemultidnd.c: