@@ -1,5 +1,7 @@
 2008-11-20  Adam Schreiber  <sadam@clemson.edu>
 
+    * libseahorse/seahorse-progress.c: Put progress dialog in upper left corner.
+    Patch from Jeff Cai.  Fixes bug #561476
     * ssh/seahorse-ssh-source.c: Monitor ssh pub key files so key changes are
     monitored on Solaris.  Patch by Jeff Cai.  Fixes bug #561641
 
